--- a/Vision/templates/store.html
+++ b/Vision/templates/store.html
@@ -35,14 +35,26 @@
                 </li>
                 {% endif %}
 
-                {% for num in paginator.page_range %}
 
-                {% if page_obj.number == num %}
-                <li class="page-item active"><a class="page-link" href="#">{{ num }}</a></li>
-                {% else %}
-                <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
-                {% endif %}
-
+                {% for pg in page_obj.paginator.page_range %}
+                    <!-- Sempre mostra as 3 primeiras e 3 últimas páginas -->
+                    {% if pg <= 3 or pg >= page_obj.paginator.num_pages|add:'-2' %}
+                        {% if page_obj.number == pg %}
+                            <li class="page-item active"><a class="page-link" href="?page={{ pg }}">{{ pg }}</a></li>
+                        {% else %}
+                            <li class="page-item"><a class="page-link" href="?page={{ pg }}">{{ pg }}</a></li>
+                        {% endif %}
+                
+                    {% else %}
+                
+                        {% if page_obj.number == pg %}
+                            <li class="page-item active"><a class="page-link" href="?page={{ pg }}">{{ pg }}</a></li>
+                        {% elif pg > page_obj.number|add:'-4' and pg < page_obj.number|add:'4' %} <!-- Mostra 3 páginas antes e 3 páginas depois da atual -->
+                            <li class="page-item"><a class="page-link" href="?page={{ pg }}">{{ pg }}</a></li>
+                        {% elif pg == page_obj.number|add:'-4' or pg == page_obj.number|add:'4' %}
+                            <li class="page-item"><a class="page-link" href="">...</a></li>
+                        {% endif %}
+                    {% endif %}
                 {% endfor %}
 
                 {% if page_obj.has_next %}
