Fiz a criação de um filtro de mangas em ordem alfabetica e criei um input para pesquisa de mangas

--- a/Vision/templates/index.html
+++ b/Vision/templates/index.html
@@ -21,7 +21,7 @@
             {% endfor %}
         </div>
         <div class="row">
-            <div class="col-md-8 black-vision">
+            <div class="col-lg-8 black-vision">
                 <h2 class="font2">Últimos Adicionados</h2>
                 <div class="manga-releases">
                     {% for MgLanca in lancamentos  %}
@@ -40,7 +40,7 @@
                     {% endfor %}
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="row">
                     <div class="manga-views black-vision">
                         <h2 class="font2">Vision Notepad</h2>
