--- a/Vision/static/css/Site.css
+++ b/Vision/static/css/Site.css
@@ -240,17 +240,18 @@ a.title:hover{
 }
 
 span.rl-genre {
-    font-size: 13px;
-    font-weight: 600;
-    color: rgba(255, 255, 255, 0.2);
+    font-size: 15px;
+    font-weight: 900;
+    color: rgba(168, 238, 89, 0.700);
     font-family: 'Roboto Thin';
 }
 
 span.rl-sinopse{
     margin-top: 5px;
-    font-size: 13px;
+    font-size: 15px;
     font-family: 'Groteska';
     color: #979797;
+    text-align: justify;
 }
 
 .rl-snps{
