--- a/Vision/templates/BaseVision.html
+++ b/Vision/templates/BaseVision.html
@@ -42,13 +42,13 @@
                 </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                        <li class="nav-item">
+                        <li class="list-menu nav-item">
                             <a class="nav-link active fonte_mv" aria-current="page" href="{% url 'mangas.html' %}"><span class="Book"></span>Mangas</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="list-menu nav-item">
                             <a class="nav-link active fonte_mv" href="{% url 'store.html' %}"><span class="Store"></span>Manga Store</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="list-menu nav-item">
                             <a class="nav-link active fonte_mv" href="{% url 'contato.html' %}"><span class="Contato"></span>Contatos</a>
                         </li>
                     </ul>
